--- a/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
+++ b/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -100,7 +99,7 @@
                                 </collectionViewFlowLayout>
                             </collectionView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7EA-pY-GDv" userLabel="BottomView">
-                                <rect key="frame" x="16" y="503" width="285" height="35"/>
+                                <rect key="frame" x="16" y="503" width="331" height="35"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uPt-GC-e9h">
                                         <rect key="frame" x="0.0" y="5" width="25" height="25"/>
@@ -163,16 +162,38 @@
                                             <action selector="smotretVkPostPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="8kf-ax-sBB"/>
                                         </connections>
                                     </button>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Us6-U2-kyD">
+                                        <rect key="frame" x="301" y="1.5" width="30" height="32.5"/>
+                                        <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="7xL-kw-HuR"/>
+                                            <constraint firstAttribute="height" constant="35" id="gRV-jj-zEj"/>
+                                        </constraints>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xR8-b0-bBu">
+                                        <rect key="frame" x="293" y="2.5" width="46" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="3CO-Nx-Wdn"/>
+                                            <constraint firstAttribute="width" constant="46" id="Cw6-8M-kmr"/>
+                                        </constraints>
+                                        <connections>
+                                            <action selector="likeButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="UdK-aG-f3j"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="a3x-eB-Twm" firstAttribute="leading" secondItem="zhE-qm-INE" secondAttribute="trailing" constant="8" id="08w-a1-jjN"/>
                                     <constraint firstItem="uPt-GC-e9h" firstAttribute="centerY" secondItem="7EA-pY-GDv" secondAttribute="centerY" id="0Iu-hu-D79"/>
                                     <constraint firstItem="uPt-GC-e9h" firstAttribute="centerY" secondItem="7EA-pY-GDv" secondAttribute="centerY" id="5Tq-fw-7Nh"/>
+                                    <constraint firstAttribute="trailing" secondItem="Us6-U2-kyD" secondAttribute="trailing" id="8X4-L9-s7q"/>
                                     <constraint firstItem="zhE-qm-INE" firstAttribute="leading" secondItem="uPt-GC-e9h" secondAttribute="trailing" constant="8" id="CKx-v3-dYN"/>
                                     <constraint firstItem="zhE-qm-INE" firstAttribute="centerY" secondItem="7EA-pY-GDv" secondAttribute="centerY" id="FvL-hB-T1r"/>
+                                    <constraint firstItem="xR8-b0-bBu" firstAttribute="centerY" secondItem="Us6-U2-kyD" secondAttribute="centerY" id="R7T-cD-hqb"/>
                                     <constraint firstAttribute="height" constant="35" id="Xe5-Nd-QvD"/>
                                     <constraint firstItem="uPt-GC-e9h" firstAttribute="leading" secondItem="7EA-pY-GDv" secondAttribute="leading" id="jUI-MK-vWP"/>
                                     <constraint firstItem="a3x-eB-Twm" firstAttribute="centerY" secondItem="7EA-pY-GDv" secondAttribute="centerY" id="naF-ST-wSH"/>
+                                    <constraint firstItem="xR8-b0-bBu" firstAttribute="centerX" secondItem="Us6-U2-kyD" secondAttribute="centerX" id="shl-s8-dW5"/>
+                                    <constraint firstItem="Us6-U2-kyD" firstAttribute="centerY" secondItem="7EA-pY-GDv" secondAttribute="centerY" id="zkZ-9c-l5A"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PUa-Dn-Z6k">
@@ -209,45 +230,22 @@
                                     <constraint firstItem="eZp-bw-5Yy" firstAttribute="leading" secondItem="PUa-Dn-Z6k" secondAttribute="leading" id="ybi-x6-wUN"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Us6-U2-kyD">
-                                <rect key="frame" x="317" y="504.5" width="30" height="32.5"/>
-                                <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="30" id="7xL-kw-HuR"/>
-                                    <constraint firstAttribute="height" constant="35" id="gRV-jj-zEj"/>
-                                </constraints>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xR8-b0-bBu">
-                                <rect key="frame" x="309" y="505.5" width="46" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="3CO-Nx-Wdn"/>
-                                    <constraint firstAttribute="width" constant="46" id="Cw6-8M-kmr"/>
-                                </constraints>
-                                <connections>
-                                    <action selector="likeButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="UdK-aG-f3j"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" name="whiteblack"/>
                         <constraints>
                             <constraint firstItem="p91-BU-613" firstAttribute="leading" secondItem="cQV-oh-YJ4" secondAttribute="leading" constant="16" id="3R9-5d-XFb"/>
-                            <constraint firstItem="Us6-U2-kyD" firstAttribute="top" secondItem="IO7-nw-6KB" secondAttribute="bottom" id="5ly-fl-rSs"/>
                             <constraint firstItem="IO7-nw-6KB" firstAttribute="top" secondItem="p91-BU-613" secondAttribute="bottom" constant="8" id="C1L-gR-xn1"/>
                             <constraint firstItem="IO7-nw-6KB" firstAttribute="leading" secondItem="cQV-oh-YJ4" secondAttribute="leading" constant="16" id="DNS-d8-jsD"/>
                             <constraint firstAttribute="trailing" secondItem="IO7-nw-6KB" secondAttribute="trailing" constant="16" id="H0r-XL-YXz"/>
                             <constraint firstItem="PUa-Dn-Z6k" firstAttribute="leading" secondItem="cQV-oh-YJ4" secondAttribute="leading" constant="16" id="HGg-Jy-ISj"/>
-                            <constraint firstItem="xR8-b0-bBu" firstAttribute="centerY" secondItem="Us6-U2-kyD" secondAttribute="centerY" id="MTL-Th-R7K"/>
                             <constraint firstItem="7EA-pY-GDv" firstAttribute="top" secondItem="IO7-nw-6KB" secondAttribute="bottom" id="NZo-Xw-G6Z"/>
-                            <constraint firstItem="xR8-b0-bBu" firstAttribute="centerX" secondItem="Us6-U2-kyD" secondAttribute="centerX" id="P7n-cO-tJ5"/>
                             <constraint firstAttribute="bottom" secondItem="PUa-Dn-Z6k" secondAttribute="bottom" constant="8" id="PRm-q7-UMl"/>
                             <constraint firstItem="p91-BU-613" firstAttribute="top" secondItem="cQV-oh-YJ4" secondAttribute="top" constant="8" id="QE2-HU-H7c"/>
                             <constraint firstAttribute="trailing" secondItem="p91-BU-613" secondAttribute="trailing" constant="16" id="SG0-YC-wEa"/>
                             <constraint firstItem="PUa-Dn-Z6k" firstAttribute="top" secondItem="7EA-pY-GDv" secondAttribute="bottom" id="Sv8-SW-enT"/>
-                            <constraint firstAttribute="trailing" secondItem="Us6-U2-kyD" secondAttribute="trailing" constant="16" id="fbb-BM-iJm"/>
-                            <constraint firstItem="Us6-U2-kyD" firstAttribute="leading" secondItem="7EA-pY-GDv" secondAttribute="trailing" constant="16" id="qc8-Ds-sl6"/>
+                            <constraint firstAttribute="trailing" secondItem="7EA-pY-GDv" secondAttribute="trailing" constant="16" id="dwS-nw-bor"/>
                             <constraint firstAttribute="trailing" secondItem="PUa-Dn-Z6k" secondAttribute="trailing" constant="16" id="rb9-3C-Vhg"/>
                             <constraint firstItem="7EA-pY-GDv" firstAttribute="leading" secondItem="cQV-oh-YJ4" secondAttribute="leading" constant="16" id="sll-1i-GNF"/>
-                            <constraint firstItem="PUa-Dn-Z6k" firstAttribute="top" secondItem="Us6-U2-kyD" secondAttribute="bottom" id="vCW-Jt-odO"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -262,12 +260,14 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="bottomView" destination="7EA-pY-GDv" id="eVX-ki-cRC"/>
                 <outlet property="byLabel" destination="F9Q-xC-IMV" id="4jX-AI-Eh1"/>
                 <outlet property="collectionView" destination="IO7-nw-6KB" id="jh9-Va-oSn"/>
                 <outlet property="likeButton" destination="xR8-b0-bBu" id="8pS-sm-EX4"/>
                 <outlet property="likeButtonImageView" destination="Us6-U2-kyD" id="jDq-WT-RgR"/>
                 <outlet property="postedLabel" destination="eZp-bw-5Yy" id="OaP-26-hV9"/>
                 <outlet property="priceLabel" destination="2D9-dG-k9E" id="o87-Hv-JUL"/>
+                <outlet property="soobshitButton" destination="tsf-WR-ctC" id="3be-l4-nK5"/>
                 <outlet property="vendorLabel" destination="SSR-4S-9BF" id="PqE-PW-DhV"/>
                 <outlet property="vigruzitImageView" destination="SgS-Tb-JH2" id="sxU-hf-4TK"/>
                 <outlet property="vigruzitLabel" destination="SzE-iO-8hf" id="tyw-6J-Oie"/>
