--- a/SadAgregator/View/cells/BrokerCell/BrokerTableViewCell.xib
+++ b/SadAgregator/View/cells/BrokerCell/BrokerTableViewCell.xib
@@ -12,11 +12,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="89" id="KGk-i7-Jjw" customClass="BrokerTableViewCell" customModule="SadAgregator" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="89"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="157" id="KGk-i7-Jjw" customClass="BrokerTableViewCell" customModule="SadAgregator" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="157"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="89"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="157"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kfR-aK-sP2">
@@ -64,31 +64,57 @@
                             <userDefinedRuntimeAttribute type="boolean" keyPath="updateOnTouch" value="NO"/>
                         </userDefinedRuntimeAttributes>
                     </view>
+                    <tableView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="NWJ-We-hil">
+                        <rect key="frame" x="16" y="82" width="288" height="67"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </tableView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d3Z-5R-sJ7" userLabel="separatorView">
+                        <rect key="frame" x="0.0" y="155" width="320" height="2"/>
+                        <color key="backgroundColor" name="gray"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="2" id="uM6-Ve-LXP"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" name="whiteblack"/>
                 <constraints>
+                    <constraint firstItem="NWJ-We-hil" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="0el-U9-Q2S"/>
+                    <constraint firstItem="NWJ-We-hil" firstAttribute="top" secondItem="kfR-aK-sP2" secondAttribute="bottom" constant="8" id="7NR-Ak-34q"/>
                     <constraint firstItem="kfR-aK-sP2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="88O-qw-S06"/>
                     <constraint firstItem="ZLc-IB-9qY" firstAttribute="leading" secondItem="vs4-yv-RDv" secondAttribute="trailing" constant="4" id="A2k-PQ-h8a"/>
+                    <constraint firstItem="d3Z-5R-sJ7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="E0d-bo-cH1"/>
                     <constraint firstItem="ZLc-IB-9qY" firstAttribute="top" secondItem="Zh6-Fw-pfs" secondAttribute="bottom" constant="6" id="GqG-Pr-NLy"/>
                     <constraint firstItem="Zh6-Fw-pfs" firstAttribute="top" secondItem="kfR-aK-sP2" secondAttribute="top" constant="8" id="VN6-1a-fWI"/>
+                    <constraint firstAttribute="trailing" secondItem="d3Z-5R-sJ7" secondAttribute="trailing" id="YKV-b5-RqE"/>
+                    <constraint firstAttribute="bottom" secondItem="NWJ-We-hil" secondAttribute="bottom" constant="8" id="m4W-Lf-nxu"/>
                     <constraint firstItem="kfR-aK-sP2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="mGV-mY-v4i"/>
                     <constraint firstItem="vs4-yv-RDv" firstAttribute="centerY" secondItem="ZLc-IB-9qY" secondAttribute="centerY" id="oKb-fd-t17"/>
                     <constraint firstItem="Zh6-Fw-pfs" firstAttribute="leading" secondItem="kfR-aK-sP2" secondAttribute="trailing" constant="8" id="puI-OQ-gUU"/>
                     <constraint firstItem="vs4-yv-RDv" firstAttribute="leading" secondItem="kfR-aK-sP2" secondAttribute="trailing" constant="8" id="qET-3v-SbV"/>
+                    <constraint firstItem="NWJ-We-hil" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="tdz-Hn-XkD"/>
+                    <constraint firstAttribute="bottom" secondItem="d3Z-5R-sJ7" secondAttribute="bottom" id="trX-fY-6kD"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <color key="backgroundColor" name="whiteblack"/>
             <connections>
                 <outlet property="brokerImageView" destination="kfR-aK-sP2" id="Vr0-KH-0DH"/>
                 <outlet property="label" destination="Zh6-Fw-pfs" id="Veo-fj-dSf"/>
                 <outlet property="ratingLabel" destination="vs4-yv-RDv" id="mWu-2m-hZc"/>
                 <outlet property="ratingView" destination="ZLc-IB-9qY" id="RuZ-Ry-03Z"/>
+                <outlet property="tableView" destination="NWJ-We-hil" id="DEc-fL-Icq"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="167.74553571428569"/>
+            <point key="canvasLocation" x="137.68115942028987" y="189.84375"/>
         </tableViewCell>
     </objects>
+    <designables>
+        <designable name="ZLc-IB-9qY">
+            <size key="intrinsicContentSize" width="120" height="20"/>
+        </designable>
+    </designables>
     <resources>
+        <namedColor name="gray">
+            <color red="0.96100002527236938" green="0.9649999737739563" blue="0.97299998998641968" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
         <namedColor name="whiteblack">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
