--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -5025,6 +5025,56 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="labelTextViewCell" rowHeight="92" id="lL1-8v-mTN">
+                                        <rect key="frame" x="0.0" y="641.33333587646484" width="390" height="92"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lL1-8v-mTN" id="ujz-CE-tf1">
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="92"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Дополнительная информация" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zbb-qq-E5y">
+                                                    <rect key="frame" x="19.999999999999986" y="10.999999999999998" width="238.66666666666663" height="20.333333333333329"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20.333333333333329" id="q9V-nv-FIh"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="URA-m0-B7B">
+                                                    <rect key="frame" x="20" y="75.333333333333329" width="350" height="2"/>
+                                                    <color key="backgroundColor" name="gray"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="2" id="NZ6-C5-hhG"/>
+                                                    </constraints>
+                                                </view>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" tag="2" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SoP-uS-4Cm">
+                                                    <rect key="frame" x="20" y="41.333333333333336" width="350" height="34.000000000000007"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="34" id="4Eo-BJ-a9J"/>
+                                                    </constraints>
+                                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                                    <color key="textColor" systemColor="labelColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textView>
+                                            </subviews>
+                                            <color key="backgroundColor" name="whiteblack"/>
+                                            <constraints>
+                                                <constraint firstItem="zbb-qq-E5y" firstAttribute="leading" secondItem="ujz-CE-tf1" secondAttribute="leadingMargin" id="3mc-2y-oa4"/>
+                                                <constraint firstItem="URA-m0-B7B" firstAttribute="top" secondItem="SoP-uS-4Cm" secondAttribute="bottom" id="75i-fe-Yzb"/>
+                                                <constraint firstItem="SoP-uS-4Cm" firstAttribute="top" secondItem="zbb-qq-E5y" secondAttribute="bottom" constant="10" id="9vY-JC-Gvd"/>
+                                                <constraint firstItem="zbb-qq-E5y" firstAttribute="top" secondItem="ujz-CE-tf1" secondAttribute="topMargin" id="NTK-fm-rtr"/>
+                                                <constraint firstItem="SoP-uS-4Cm" firstAttribute="leading" secondItem="ujz-CE-tf1" secondAttribute="leadingMargin" id="QgH-Bh-e3J"/>
+                                                <constraint firstItem="URA-m0-B7B" firstAttribute="leading" secondItem="ujz-CE-tf1" secondAttribute="leadingMargin" id="S2L-43-XFH"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="URA-m0-B7B" secondAttribute="trailing" id="ftC-Wq-bS0"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="SoP-uS-4Cm" secondAttribute="trailing" id="izt-Ae-srD"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="URA-m0-B7B" secondAttribute="bottom" constant="3.6666666666666714" id="rRA-ED-tUt"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" name="whiteblack"/>
+                                    </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
